paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_001/target.compile.log
error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_001/target.rs:2:1
  |
2 | extern crate lazy_static;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_001/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref G: RefCell<i32> = RefCell::new(0);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_001/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref G: RefCell<i32> = RefCell::new(0);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_001/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref G: RefCell<i32> = RefCell::new(0);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_001/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref G: RefCell<i32> = RefCell::new(0);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_001/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref G: RefCell<i32> = RefCell::new(0);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_internal` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `RefCell<i32>` cannot be shared between threads safely
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_001/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref G: RefCell<i32> = RefCell::new(0);
8 | | }
  | |_^ `RefCell<i32>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `RefCell<i32>`
  = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required by a bound in `Lazy`
 --> /rust/deps/lazy_static-1.5.0/src/inline_lazy.rs:19:1
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: use of unstable library feature `rustc_private`: this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_001/target.rs:6:1
  |
6 | / lazy_static! {
7 | |     static ref G: RefCell<i32> = RefCell::new(0);
8 | | }
  | |_^
  |
  = note: see issue #27812 <https://github.com/rust-lang/rust/issues/27812> for more information
  = help: add `#![feature(rustc_private)]` to the crate attributes to enable
  = note: this compiler was built on 2025-09-09; consider upgrading it if it is out of date
  = note: this error originates in the macro `__lazy_static_create` which comes from the expansion of the macro `lazy_static` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.